Updates on updates

--- a/credentials.yaml
+++ b/credentials.yaml
@@ -7,3 +7,4 @@ custom_vision:
   prediction_key: f781e22c9104486bb36da4891d810495
   id: 493748b5-3104-4264-99fe-0bcfca0e63c3
   name: Street Lamps Predictor
+MAPS_APIKEY: AIzaSyBFfGToQGsef8hPNDnKF8hTbb9Vof67HdU
